--- a/fe/package.json
+++ b/fe/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.10.0",
     "@mui/styled-engine-sc": "^5.10.1",
     "@mui/x-data-grid": "^5.16.0",
+    "@mui/x-date-pickers": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
