DRY and improvements

--- a/CRM-Building-Company/src/main/resources/application.properties
+++ b/CRM-Building-Company/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=Patoduck2804
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
 #Visualize native SQL queries
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
