--- a/fe/package.json
+++ b/fe/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.10.0",
     "@mui/styled-engine-sc": "^5.10.1",
     "@mui/x-data-grid": "^5.16.0",
+    "@mui/x-data-grid-generator": "^5.17.15",
     "@mui/x-date-pickers": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
