Oauth2 and JWT token added

--- a/CRM-Building-Company/src/main/resources/application.properties
+++ b/CRM-Building-Company/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
 #Visualize native SQL queries
 spring.jpa.show-sql=false
+
+#KEYS for JWT-TOKEN
+#jwt.secret=manyroads
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
